# backend/build/swagger.json
@@ -36,6 +36,10 @@
 						},
 						"type": "array"
 					},
+					"lastPasswordChange": {
+						"type": "string",
+						"format": "date-time"
+					},
 					"isDeleted": {
 						"type": "boolean"
 					}
@@ -76,6 +80,10 @@
 							"type": "string"
 						},
 						"type": "array"
+					},
+					"lastPasswordChange": {
+						"type": "string",
+						"format": "date-time"
 					},
 					"isDeleted": {
 						"type": "boolean"
@@ -362,6 +370,50 @@
 				},
 				"required": [
 					"token",
+					"password",
+					"confirm_password"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"RefreshTokenResponse": {
+				"properties": {
+					"token": {
+						"type": "string"
+					},
+					"refreshToken": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"token",
+					"refreshToken"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"RefreshTokenRequest": {
+				"properties": {
+					"refreshToken": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"refreshToken"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ChangePasswordRequest": {
+				"properties": {
+					"password": {
+						"type": "string"
+					},
+					"confirm_password": {
+						"type": "string"
+					}
+				},
+				"required": [
 					"password",
 					"confirm_password"
 				],
@@ -695,6 +747,62 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"IAlertPreference": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"userId": {
+						"type": "string"
+					},
+					"newProductInCategory": {
+						"type": "boolean"
+					},
+					"productRestock": {
+						"type": "boolean"
+					},
+					"priceChange": {
+						"type": "boolean"
+					},
+					"newsletter": {
+						"type": "boolean"
+					}
+				},
+				"required": [
+					"id",
+					"userId",
+					"newProductInCategory",
+					"productRestock",
+					"priceChange",
+					"newsletter"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Partial_IAlertPreference_": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"userId": {
+						"type": "string"
+					},
+					"newProductInCategory": {
+						"type": "boolean"
+					},
+					"productRestock": {
+						"type": "boolean"
+					},
+					"priceChange": {
+						"type": "boolean"
+					},
+					"newsletter": {
+						"type": "boolean"
+					}
+				},
+				"type": "object",
+				"description": "Make all properties in T optional"
 			}
 		},
 		"securitySchemes": {
@@ -891,6 +999,40 @@
 						}
 					}
 				}
+			}
+		},
+		"/users/password-status": {
+			"get": {
+				"operationId": "getPasswordStatus",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"needsChange": {
+											"type": "boolean"
+										}
+									},
+									"required": [
+										"needsChange"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": []
 			}
 		},
 		"/products/low-stock": {
@@ -1824,6 +1966,12 @@
 							"application/json": {
 								"schema": {
 									"properties": {
+										"mustChangePassword": {
+											"type": "boolean"
+										},
+										"refreshToken": {
+											"type": "string"
+										},
 										"token": {
 											"type": "string"
 										},
@@ -1832,6 +1980,8 @@
 										}
 									},
 									"required": [
+										"mustChangePassword",
+										"refreshToken",
 										"token",
 										"user"
 									],
@@ -2095,6 +2245,78 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/UpdatePasswordRequest"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/auth/refresh-token": {
+			"post": {
+				"operationId": "refreshToken",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/RefreshTokenResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Auth"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/RefreshTokenRequest"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/auth/change-password": {
+			"post": {
+				"operationId": "changePassword",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Auth"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ChangePasswordRequest"
 							}
 						}
 					}
@@ -2551,6 +2773,70 @@
 					}
 				],
 				"parameters": []
+			}
+		},
+		"/alerts/preferences": {
+			"get": {
+				"operationId": "GetAlertPreferences",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/IAlertPreference"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": []
+			},
+			"put": {
+				"operationId": "UpdateAlertPreferences",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/IAlertPreference"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/Partial_IAlertPreference_"
+							}
+						}
+					}
+				}
 			}
 		}
 	},
